--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_image_compress: ^0.6.3
   path_provider: ^1.4.0
   uuid: ^2.0.2
+  provider: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
