added code to like/unlike posts

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,9 @@ dependencies:
   flutter_image_compress: ^0.6.3
   path_provider: ^1.4.0
   uuid: ^2.0.2
-  provider: ^3.1.0+1
+  provider: ^3.2.0
   image_cropper: ^1.1.0
+  animator: ^1.0.0+3
 
 dev_dependencies:
   flutter_test:
